Fix wrong Eth/68 RLP Encoding/decoding
Signed-off-by: Gabriel-Trintinalia <gabriel.trintinalia@consensys.net>